--- a/index .html
+++ b/index .html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ckeck point html</html></title>
-</head>
+<!--<style>
+body{
+background-color:beige
+}
+ </style>-->
+
+    <link rel="stylesheet" href="./styles.css">
+
+
+    </head>
 <body>
-    <nav>
-    <li>accueil</li>
-    <li>a propos</li>
-    <li>travail</li>
-    <li>cv</li>
-    <li>contact</li>              
+    <nav>         
+    <li class="soliel"> <a href="#"></a>accueil</li>
+    <li class="soliel"> <a href="#"></a>a propos</li>
+    <li class="soliel"><a href="#"></a>travail</li>
+    <li class="soliel"><a href="#"></a>cv</li>
+    <li class="soliel"><a href="#"></a>contact</li>              
     </nav>
 
 <br>
@@ -40,26 +49,26 @@
 
 <!--section a propos-->
 <section>
-    <h1>a propos</h1>
-     <p>Bienvevenue....</p>
+    <h1 class="mariam">a propos</h1>
+     <p class="lune">Bienvevenue....</p>
 </section>
 
 <!--section travial-->
-<SEction>
-    <h2>travail</h2>
-    <p>mon travail</p>
-</SEction>
+<section>
+    <h2 class="mariam">travail</h2>
+    <p class="lune">mon travail</p>
+</section>
 
 <!--section cv -->
 <section>
-    <h3>cv</h3>
-<p>envoyer le lien de votre cv </p>
+    <h3 class="mariam">cv</h3>
+<p class="lune">envoyer le lien de votre cv </p>
 </section>
 
 <!--section contact-->
 <section>
-<h4>contact</h4>
-<form>
+<h4 class="mariam">contact</h4>
+<form><s></s>
     <label>Name:</label>
     <input type="text" name="first name" placeholder="Type your name here" />
     <br />
@@ -86,7 +95,7 @@
 
 <br>
 
-  <footer> merci de remplire avec toutes les informations </footer>
+  <footer class="pomme"> merci de remplire avec toutes les informations </footer>
 
 
     
